Mobius Forensic Toolkit 2.19
	* docs: Create directory for consolidated documentation
	* Created new resource folder data/profiles
	* evidence-viewer: Added new items' status tableview
	* evidence-viewer: Added new profile combobox
	* evidence-viewer: Added new processing status tableview
	* app-chromium: Changed file_cookies module to handle Cookies files v17
	* libmobius_core: Added new method decoder::inifile::get_value (with default value)
	* libmobius_core: Added new method decoder::inifile::get_values
	* libmobius_core: Added new method decoder::inifile::set_value_char
	* libmobius_framework: Added new class case_profile
	* libmobius_framework: Added new function list_case_profiles
	* libmobius_framework: Added new class vfs_processor_impl_base
	* libmobius_framework: Added new class ant_impl_vfs_processor
	* libmobius_framework: Added new class vfs_processor
	* libmobius_python: Added new class framework.case_profile
	* libmobius_python: Added new function framework.list_case_profiles
	* libmobius_python: Changed core.vfs.vfs class to release GIL when calling C++ methods
	* libmobius_python: Changed io.folder class to release GIL when calling C++ methods
	* libmobius_python: Added new class framework.ant.vfs_processor

Mobius Forensic Toolkit 2.18
	* app-chromium: Added support for History schema version up to 70
	* app-chromium: Added support for Web Data schema version up to 141
	* app-chromium: Added new function get_db_schema_version(db)  
	* app-chromium: Added decoding for Bookmarks files  
	* app-chromium: Added decoding for Cookies files  
	* app-chromium: Added decoding for Extension Cookies files  
	* app-chromium: Added decoding for Safe Browsing Cookies files  
	* app-chromium: Added decoding for Local State files  
	* app-chromium: Added decoding for Login Data files  
	* app-chromium: Added decoding for Login Data For Account files  
	* app-chromium: Added decoding for Preferences files  