@@ -1,0 +1,14 @@
+[general]
+name=Forensics
+description=Deep Forensic Scan
+
+[processor]
+scope=all	# all = all folders, users = only users folders and subfolders
+
+[processors]
+app-ares
+app-chromium
+app-emule
+app-emuletorrent
+app-shareaza
+app-utorrent
