@@ -1,5 +1,5 @@
-#ifndef MOBIUS_EXTENSION_APP_CHROMIUM_EVIDENCE_LOADER_IMPL_HPP
-#define MOBIUS_EXTENSION_APP_CHROMIUM_EVIDENCE_LOADER_IMPL_HPP
+#ifndef MOBIUS_EXTENSION_APP_CHROMIUM_VFS_PROCESSOR_IMPL_HPP
+#define MOBIUS_EXTENSION_APP_CHROMIUM_VFS_PROCESSOR_IMPL_HPP
 
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 // Mobius Forensic Toolkit
@@ -20,7 +20,8 @@
 // You should have received a copy of the GNU General Public License
 // along with this program. If not, see <http://www.gnu.org/licenses/>.
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-#include <mobius/framework/evidence_loader_impl_base.hpp>
+#include <mobius/framework/ant/vfs_processor_impl_base.hpp>
+#include <mobius/framework/case_profile.hpp>
 #include <mobius/framework/model/item.hpp>
 #include <string>
 #include <vector>
@@ -30,10 +31,10 @@
 namespace mobius::extension::app::chromium
 {
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-// @brief <i>Chromium evidence_loader</i> implementation class
+// @brief Chromium <i>vfs_processor</i> implementation class
 // @author Eduardo Aguiar
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-class evidence_loader_impl : public mobius::framework::evidence_loader_impl_base
+class vfs_processor_impl : public mobius::framework::ant::vfs_processor_impl_base
 {
   public:
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
@@ -44,42 +45,20 @@ class evidence_loader_impl : public mobius::framework::evidence_loader_impl_base
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     // Constructors
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    explicit evidence_loader_impl (
-        const mobius::framework::model::item &, scan_type
+    explicit vfs_processor_impl (
+        const mobius::framework::model::item &,
+        const mobius::framework::case_profile &
     );
 
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     // Function prototypes
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    void run () final;
-    void scan_folder (const mobius::core::io::folder &);
-
-    // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    // @brief Check if object is valid
-    // @return true/false
-    // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    explicit
-    operator bool () const noexcept final
-    {
-        return true;
-    }
-
-    // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    // @brief Get evidence_loader type
-    // @return Type as string
-    // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    std::string
-    get_type () const final
-    {
-        return "app-chromium";
-    }
+    void on_folder (const mobius::core::io::folder &) final;
+    void on_complete () final;
 
   private:
     // @brief Case item
     mobius::framework::model::item item_;
-
-    // @brief Scan type
-    scan_type scan_type_;
 
     // @brief User name
     std::string username_;
@@ -96,15 +75,9 @@ class evidence_loader_impl : public mobius::framework::evidence_loader_impl_base
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
     // Helper functions
     // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
-    void _scan_canonical_folders ();
-    void _scan_canonical_root_folder (const mobius::core::io::folder &);
-    void _scan_canonical_user_folder (const mobius::core::io::folder &);
-    void _scan_all_folders (const mobius::core::io::folder &);
     void _scan_local_state (const mobius::core::io::folder &);
     void _scan_profile (const mobius::core::io::folder &);
     void _decode_local_state_file (const mobius::core::io::file &);
-
-    void _save_evidences ();
 
     void _save_app_profiles ();
     void _save_autofills ();
