@@ -5,6 +5,8 @@ Mobius Forensic Toolkit 2.19
 	* evidence-viewer: Added new profile combobox
 	* evidence-viewer: Added new processing status tableview
 	* app-chromium: Changed file_cookies module to handle Cookies files v17
+	* app-chromium: Added new class vfs_processor_impl 
+	* app-chromium: Removed class evidence_loader_impl
 	* libmobius_core: Added new method decoder::inifile::get_value (with default value)
 	* libmobius_core: Added new method decoder::inifile::get_values
 	* libmobius_core: Added new method decoder::inifile::set_value_char
@@ -17,6 +19,7 @@ Mobius Forensic Toolkit 2.19
 	* libmobius_python: Added new function framework.list_case_profiles
 	* libmobius_python: Changed core.vfs.vfs class to release GIL when calling C++ methods
 	* libmobius_python: Changed io.folder class to release GIL when calling C++ methods
+	* libmobius_python: Changed framework.ant.run method to release GIL when calling C++
 	* libmobius_python: Added new class framework.ant.vfs_processor
 
 Mobius Forensic Toolkit 2.18
